--- a/education.html
+++ b/education.html
@@ -31,7 +31,7 @@
                 </tr>
                 <tr>
                     <td><h2>2021-2024</h2></td>
-                    <td><h2>Sixth Grader to Eight Grader</h2></td>
+                    <td><h2>Sixth Grader to Eighth Grader</h2></td>
                 </tr>
             </tbody>
         </table></center>
