--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
 </div>
 <div class="bottom-container">
     <a class="footer-link" href="https://twitter.com/njiang49296945">Twitter</a>
+    <br>
+    <a class="footer-link" href="webGL/index.html">My FPS Microgame</a>
     <p class="copyright">© 2021 Nathan Jiang</p>
 </div>
 
