--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div class="bottom-container">
     <a class="footer-link" href="https://twitter.com/njiang49296945">Twitter</a>
     <br>
-    <a class="footer-link" href="webGL/index.html">My FPS Microgame</a>
+    <a class="footer-link" href="/webGL/index.html">My FPS Microgame</a>
     <p class="copyright">© 2021 Nathan Jiang</p>
 </div>
 
