--- a/webGL/index.html
+++ b/webGL/index.html
@@ -19,6 +19,9 @@
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
         <div class="title">MyFPSMicrogame</div>
+        <br>
+        <a href="/KartingWebGL/index.html">My Karting Microgame</a>
+        <a href="/index.html">Home Page</a>
       </div>
     </div>
   </body>
